cambie la alineacion de los items de los divs genericos

--- a/css/main.css
+++ b/css/main.css
@@ -51,6 +51,7 @@ main .div-generico{
     display: flex;
     flex-direction: column;
     align-items: center;
+    justify-content: center;
     gap: 1rem;
 }
 
